<resources>
    <string name="app_name">Anroid</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="strings_accept_button">Принять</string>
    <string name="strings_decline_button">Отменить</string>
    <string name="string_login">Логин</string>
    <string name="strings_password">Пароль</string>
    <string name="strings_password_repeat">Повторите пароль</string>
    <string name="strings_enter">Вход</string>
    <string name="strings_registration">Регистрация</string>
    <string name="strings_forget_password">Забыли пароль?</string>
    <string name="strings_name">ReNote</string>
    <string name="delete_button_text">Удалить выбранное</string>
    <string name="add_button_text">Добавить запись</string>
    <string name="model_user_name">Name</string>
    <string name="model_note_text">text</string>
    <string name="model_note_id">id</string>
    <string name="model_note_image">image</string>
</resources>
